--- a/relatorio.html
+++ b/relatorio.html
@@ -1,118 +1,256 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Relatório - RH Evoluído</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Gerar Relatório</title>
+<style>
+  *{margin:0; padding:0; box-sizing:border-box;}
+  html, body {
+    height: 100%;
+    font-family: Arial, sans-serif;
+    background: #fff0f6;
+    color: #4a2a4a;
+  }
+  body {
+    display: flex; flex-direction: column; min-height: 100vh;
+  }
+  header {
+    background: #fff;
+    box-shadow: 0 2px 6px rgba(214,51,108,0.3);
+    padding: 10px 0;
+  }
+  nav ul {
+    max-width: 700px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    list-style: none;
+    font-weight: 600;
+  }
+  nav a {
+    text-decoration: none;
+    color: #d6336c;
+    font-size: 1.1rem;
+    padding: 8px 15px;
+    border-radius: 8px;
+    transition: background-color 0.3s ease;
+  }
+  nav a:hover, nav a:focus {
+    background-color: #a02947;
+    color: white;
+    outline: none;
+  }
+  main {
+    flex: 1;
+    margin: 20px auto 40px;
+    background: white;
+    padding: 30px 25px;
+    border-radius: 15px;
+    box-shadow: 0 5px 20px rgba(214,51,108,0.25);
+    max-width: 700px;
+    width: 90%;
+  }
+  h1 {
+    color: #d6336c;
+    font-weight: 700;
+    font-size: 2rem;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  form label {
+    display: block;
+    margin-bottom: 15px;
+    font-weight: 600;
+  }
+  form input[type="date"] {
+    width: 100%;
+    padding: 8px 12px;
+    border: 1.8px solid #d6336c;
+    border-radius: 8px;
+    font-size: 1rem;
+    margin-top: 5px;
+  }
+  form button {
+    background: #d6336c;
+    color: white;
+    border: none;
+    padding: 14px 20px;
+    font-size: 1.1rem;
+    font-weight: 700;
+    border-radius: 10px;
+    cursor: pointer;
+    width: 100%;
+    margin-top: 15px;
+    transition: background-color 0.3s ease;
+  }
+  form button:hover,
+  form button:focus {
+    background-color: #a02947;
+    outline: none;
+  }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 30px;
+  }
+  th, td {
+    border: 1px solid #d6336c;
+    padding: 10px;
+    text-align: left;
+    font-size: 0.9rem;
+  }
+  th {
+    background: #f8cbd0;
+  }
+  td.actions {
+    text-align: center;
+  }
+  .section {
+    margin-bottom: 30px;
+  }
+</style>
 </head>
 <body>
-  <header>
-    <nav class="menu">
-      <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="cadastro.html">Cadastrar Funcionário</a></li>
-        <li><a href="ativos.html">Funcionários Ativos</a></li>
-        <li><a href="inativos.html">Funcionários Inativos</a></li>
-        <li><a href="ferias.html">Lançar Férias</a></li>
-        <li><a href="demissao.html">Registrar Demissão</a></li>
-        <li><a href="aviso.html">Aviso Prévio</a></li>
-        <li><a href="relatorio.html">Gerar Relatório</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="cadastro.html">Cadastrar Funcionário</a></li>
+      <li><a href="ferias.html">Lançar Férias</a></li>
+      <li><a href="demissao.html">Registrar Demissão</a></li>
+      <li><a href="aviso.html">Aviso Prévio</a></li>
+      <li><a href="ativos.html">Funcionários Ativos</a></li>
+      <li><a href="inativos.html">Funcionários Inativos</a></li>
+      <li><a href="relatorio.html">Gerar Relatório</a></li>
+    </ul>
+  </nav>
+</header>
+<main>
+  <h1>Gerar Relatório</h1>
+  <form id="formRelatorio" class="section">
+    <label>
+      Data Inicial:
+      <input type="date" id="dataInicial" required />
+    </label>
+    <label>
+      Data Final:
+      <input type="date" id="dataFinal" required />
+    </label>
+    <button type="submit">Gerar Relatório</button>
+  </form>
 
-  <main>
-    <section class="container">
-      <h1>Gerar Relatório</h1>
+  <section id="resultadoRelatorio"></section>
+</main>
 
-      <form id="form-relatorio">
-        <label for="dataInicio">Data Início:</label>
-        <input type="date" id="dataInicio" required />
-
-        <label for="dataFim">Data Final:</label>
-        <input type="date" id="dataFim" required />
-
-        <button type="submit">Gerar Relatório</button>
-      </form>
-
-      <h2>Relatório</h2>
-      <pre id="relatorio-output" style="white-space: pre-wrap; background:#fff5f8; border: 1px solid #d6336c; border-radius: 10px; padding: 15px; max-height: 400px; overflow-y: auto;"></pre>
-    </section>
-  </main>
-
-  <script>
-    const form = document.getElementById("form-relatorio");
-    const output = document.getElementById("relatorio-output");
-
-    function carregarTodosDados() {
-      return {
-        ativos: JSON.parse(localStorage.getItem("funcionariosAtivos") || "[]"),
-        inativos: JSON.parse(localStorage.getItem("funcionariosInativos") || "[]"),
-        ferias: JSON.parse(localStorage.getItem("ferias") || "[]"),
-        demissoes: JSON.parse(localStorage.getItem("demissoes") || "[]"),
-        avisos: JSON.parse(localStorage.getItem("avisos") || "[]")
-      };
-    }
-
-    function filtrarPorData(lista, dataInicio, dataFim, campo = "dataInicio") {
-      const dtInicio = new Date(dataInicio);
-      const dtFim = new Date(dataFim);
-      return lista.filter(item => {
-        const dtItem = new Date(item[campo]);
-        return dtItem >= dtInicio && dtItem <= dtFim;
-      });
-    }
-
-    form.addEventListener("submit", e => {
-      e.preventDefault();
-
-      const dataInicio = form.dataInicio.value;
-      const dataFim = form.dataFim.value;
-
-      if (!dataInicio || !dataFim) {
-        alert("Preencha as datas corretamente.");
-        return;
-      }
-
-      if (new Date(dataInicio) > new Date(dataFim)) {
-        alert("Data início deve ser anterior ou igual à data final.");
-        return;
-      }
-
-      const dados = carregarTodosDados();
-
-      const ativosFiltrados = filtrarPorData(dados.ativos, dataInicio, dataFim);
-      const inativosFiltrados = filtrarPorData(dados.inativos, dataInicio, dataFim);
-      const feriasFiltradas = filtrarPorData(dados.ferias, dataInicio, dataFim);
-      const demissoesFiltradas = filtrarPorData(dados.demissoes, dataInicio, dataFim);
-      const avisosFiltrados = filtrarPorData(dados.avisos, dataInicio, dataFim);
-
-      let texto = `Relatório de RH\nPeríodo: ${dataInicio} até ${dataFim}\n\n`;
-
-      texto += "Funcionários Ativos:\n";
-      ativosFiltrados.forEach(f => {
-        texto += `- ${f.nome} | CPF: ${f.cpf}\n`;
-      });
-      texto += "\nFuncionários Inativos:\n";
-      inativosFiltrados.forEach(f => {
-        texto += `- ${f.nome} | CPF: ${f.cpf}\n`;
-      });
-      texto += "\nFérias Registradas:\n";
-      feriasFiltradas.forEach(f => {
-        texto += `- ${f.nome} | CPF: ${f.cpf} | Local: ${f.local} | ${f.dataInicio} a ${f.dataFim}\n`;
-      });
-      texto += "\nDemissões Registradas:\n";
-      demissoesFiltradas.forEach(f => {
-        texto += `- ${f.nome} | CPF: ${f.cpf} | Data: ${f.data} | Motivo: ${f.motivo} | Local: ${f.local}\n`;
-      });
-      texto += "\nAvisos Prévios:\n";
-      avisosFiltrados.forEach(f => {
-        texto += `- ${f.nome} | CPF: ${f.cpf} | Local: ${f.local} | ${f.dataInicio} a ${f.dataFim}\n`;
-      });
-
-      output.textContent = texto || "Nenhum dado encontrado para o período informado.";
+<script>
+  function filtrarPorPeriodo(lista, dataChave, dataInicio, dataFim) {
+    return lista.filter(item => {
+      const d = new Date(item[dataChave]);
+      return d >= dataInicio && d <= dataFim;
     });
-  </script>
+  }
+
+  function formatarDataBR(dataISO) {
+    const d = new Date(dataISO);
+    return d.toLocaleDateString('pt-BR');
+  }
+
+  document.getElementById('formRelatorio').addEventListener('submit', e => {
+    e.preventDefault();
+    const dataInicialInput = document.getElementById('dataInicial').value;
+    const dataFinalInput = document.getElementById('dataFinal').value;
+    if(!dataInicialInput || !dataFinalInput) {
+      alert('Informe o período para gerar o relatório.');
+      return;
+    }
+    const dataInicial = new Date(dataInicialInput);
+    const dataFinal = new Date(dataFinalInput);
+    if(dataFinal < dataInicial) {
+      alert('Data final deve ser maior ou igual à data inicial.');
+      return;
+    }
+
+    const ativos = JSON.parse(localStorage.getItem('funcionariosAtivos') || '[]');
+    const inativos = JSON.parse(localStorage.getItem('funcionariosInativos') || '[]');
+    const ferias = JSON.parse(localStorage.getItem('ferias') || '[]');
+    const demissoes = JSON.parse(localStorage.getItem('demissoes') || '[]');
+    const avisos = JSON.parse(localStorage.getItem('avisoPrevio') || '[]');
+
+    const ativosFiltrados = ativos.filter(f => f.dataCadastro && new Date(f.dataCadastro) >= dataInicial && new Date(f.dataCadastro) <= dataFinal);
+    const inativosFiltrados = filtrarPorPeriodo(inativos, 'dataDemissao', dataInicial, dataFinal);
+    const feriasFiltradas = ferias.filter(f => {
+      const inicio = new Date(f.dataInicio);
+      const fim = new Date(f.dataFim);
+      return (inicio <= dataFinal && fim >= dataInicial);
+    });
+    const demissoesFiltradas = filtrarPorPeriodo(demissoes, 'dataDemissao', dataInicial, dataFinal);
+    const avisosFiltrados = avisos.filter(a => {
+      const inicio = new Date(a.dataInicio);
+      const termino = new Date(a.dataTermino);
+      return (inicio <= dataFinal && termino >= dataInicial);
+    });
+
+    let html = '';
+
+    html += `<h2>Funcionários Ativos (${ativosFiltrados.length})</h2>`;
+    if(ativosFiltrados.length > 0){
+      html += `<table><thead><tr><th>Nome</th><th>CPF</th><th>Data Cadastro</th></tr></thead><tbody>`;
+      ativosFiltrados.forEach(f => {
+        html += `<tr><td>${f.nome}</td><td>${f.cpf}</td><td>${formatarDataBR(f.dataCadastro)}</td></tr>`;
+      });
+      html += `</tbody></table>`;
+    } else {
+      html += `<p>Nenhum registro encontrado.</p>`;
+    }
+
+    html += `<h2>Funcionários Inativos (${inativosFiltrados.length})</h2>`;
+    if(inativosFiltrados.length > 0){
+      html += `<table><thead><tr><th>Nome</th><th>CPF</th><th>Data Demissão</th><th>Motivo</th><th>Local</th></tr></thead><tbody>`;
+      inativosFiltrados.forEach(f => {
+        html += `<tr><td>${f.nome}</td><td>${f.cpf}</td><td>${formatarDataBR(f.dataDemissao)}</td><td>${f.motivo}</td><td>${f.local}</td></tr>`;
+      });
+      html += `</tbody></table>`;
+    } else {
+      html += `<p>Nenhum registro encontrado.</p>`;
+    }
+
+    html += `<h2>Férias (${feriasFiltradas.length})</h2>`;
+    if(feriasFiltradas.length > 0){
+      html += `<table><thead><tr><th>Nome</th><th>Data Início</th><th>Data Fim</th></tr></thead><tbody>`;
+      feriasFiltradas.forEach(f => {
+        html += `<tr><td>${f.nome}</td><td>${formatarDataBR(f.dataInicio)}</td><td>${formatarDataBR(f.dataFim)}</td></tr>`;
+      });
+      html += `</tbody></table>`;
+    } else {
+      html += `<p>Nenhum registro encontrado.</p>`;
+    }
+
+    html += `<h2>Demissões (${demissoesFiltradas.length})</h2>`;
+    if(demissoesFiltradas.length > 0){
+      html += `<table><thead><tr><th>Nome</th><th>CPF</th><th>Data Demissão</th><th>Motivo</th><th>Local</th></tr></thead><tbody>`;
+      demissoesFiltradas.forEach(d => {
+        html += `<tr><td>${d.nome}</td><td>${d.cpf}</td><td>${formatarDataBR(d.dataDemissao)}</td><td>${d.motivo}</td><td>${d.local}</td></tr>`;
+      });
+      html += `</tbody></table>`;
+    } else {
+      html += `<p>Nenhum registro encontrado.</p>`;
+    }
+
+    html += `<h2>Aviso Prévio (${avisosFiltrados.length})</h2>`;
+    if(avisosFiltrados.length > 0){
+      html += `<table><thead><tr><th>Nome</th><th>Data Início</th><th>Data Término</th></tr></thead><tbody>`;
+      avisosFiltrados.forEach(a => {
+        html += `<tr><td>${a.nome}</td><td>${formatarDataBR(a.dataInicio)}</td><td>${formatarDataBR(a.dataTermino)}</td></tr>`;
+      });
+      html += `</tbody></table>`;
+    } else {
+      html += `<p>Nenhum registro encontrado.</p>`;
+    }
+
+    document.getElementById('resultadoRelatorio').innerHTML = html;
+  });
+</script>
 </body>
 </html>
